# matsuzawa-20260210-2

./: pyproject.toml
.github/workflows/: run_pilot_experiment.yml
.research/: research_history.json
config/: config.yaml
config/runs/: comparative-1-Qwen3-8B-gsm8k.yaml  proposed-Qwen3-8B-gsm8k.yaml
src/: evaluate.py  main.py  model.py  preprocess.py  train.py
